# minicallcenter

./: .env.example  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: common.py
backend/app/api/common/: __init__.py
backend/app/api/v1/: api.py
backend/app/api/v1/ai/: router.py
backend/app/api/v1/endpoints/: auth.py  call.py  config.py  customer.py  permission.py  report.py  role.py  system.py  user.py
backend/app/core/: config.py  config_engine.py  dependencies.py  middleware.py  permission.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: ai.py  call.py  config.py  customer.py  system.py
backend/app/schemas/: auth.py  base.py  call.py  customer.py  permission.py  report.py  role.py  system.py  user.py
backend/app/services/: base.py  call.py  call_recognition_service.py  customer.py  permission.py  report.py  role.py  system.py  user.py
backend/app/services/ai/: __init__.py  base.py  factory.py
backend/app/services/ai/providers/: aliyun.py  mock.py
backend/app/utils/: logger.py  redis_client.py  security.py
backend/config/: rbac_model.conf
docker/mysql/: init.sql
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: .env.development  .env.production  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: call.js  customer.js  report.js  system.js  user.js
(+32 files in other folders)
